# AgenticInsuranceClaimAssitant

./: .env.example  .gitignore  README.md  app.py  config.py  crew.py  pyproject.toml
knowledge/: appeal_templates.md  denial_codes.json  regulations.md
samples/: sample_policy_bajaj_allianz.txt  sample_rejection_1_star_health.txt  sample_rejection_2_icici_lombard.txt  sample_rejection_3_hdfc_partial.txt
tools/: __init__.py  denial_codes.py  pdf_parser.py
